hero section height and spacing fix

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,16 +1,19 @@
 @import '../../styles/vars';
 
 .wrapper{
-    display: flex;
-    height: 70px;
-    align-items: center;
-    width: 100%;
-    //margin: 0 16px;
-    //background-color: $global-header;
-    background-image: linear-gradient(269deg, #8550ab, #4d0085 80.1%, #4d0085 80.98%, #844fab);
+    background-image: linear-gradient(269deg, #8550ab, #4d0085 80.1%, #4d0085 100.98%, #844fab);
     position: sticky;
     top: 0;
     z-index: 10;
+    width: 100%;
+}
+.box{
+    display: flex;
+    height: 70px;
+    align-items: center;
+    //margin: 0 16px;
+    //background-color: $global-header;
+    //background-image: linear-gradient(269deg, #8550ab, #4d0085 80.1%, #4d0085 80.98%, #844fab);
 }
 .logo {
     width: 30%;
@@ -21,6 +24,7 @@
     a {
         color: white;
         text-decoration: none;
+        text-shadow: 5px solid #fff;
     }
     
 }
