--- a/src/components/SectionHero/sectionHero.module.scss
+++ b/src/components/SectionHero/sectionHero.module.scss
@@ -2,7 +2,7 @@
     position: relative;
 }
 .hero{
-    height: 85vh;
+    height: 98vh;
     object-fit: contain;
     filter: brightness(0.5)
 }
@@ -12,7 +12,7 @@
     font-weight: 700;
     left: 5%;
     font-size: 2.5rem;
-    top: 50%;
+    top: 45%;
     padding: 10px;
     width: 450px;
     transform: translate(-10%, -50%);
