--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -11,7 +11,7 @@ $font-family-bold: "Montserrat bold", sans-serif;
 
 
 // spacing
-$spacing: 16px;
+$spacing: 25px;
 $spacing-half: 8px;
 $spacing-double: 32px;
 $spacing-negative: -16px;
